modify jvm note