@@ -16,7 +16,10 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 	(2).可达性分析法:解决循环引用问题:
 		基本思想是通过一系列的"GC Roots"对象作为起点进行搜索,如果在"GC Roots"和一个对象之间没有可达路径,则称该对象是不可达的;
 		要注意的是被判定为不可达的对象不一定就会成为可回收对象.被判定为不可达的对象要成为可回收对象必须至少经历两次标记过程
-
+3.GC 回收区域:
+	(1).程序计数器、虚拟机栈、本地方法栈不需要进行垃圾回收的,因为他们的生命周期是和线程同步的,随着线程的销毁,
+	其占用的内存会自动释放,
+	(2).堆和方法区是线程共享的,需要进行垃圾回收
 二.垃圾回收机制的对象判断算法:
 1.引用计数算法:Reference Counting Collector
 	1.1.算法分析:给对象中添加一个引用计数器,每当有一个地方引用他时,计数器就加 1;当引用失效时,引用计时器就减 1;
@@ -51,6 +54,11 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 		(2).方法区中类静态属性引用的对象;
 		(3).方法区中常量引用的对象;
 		(4).本地方法栈中 JNI(即一般说的 native 方法)引用的对象;
+	2.3.对于用可达性分析法搜索不到的对象,GC 并不一定会回收该对象:要完全回收一个对象,至少需要经过两次标记的过程
+		(1).第一次标记:对于一个没有其他引用的对象,筛选该对象是否有必要执行 finalize 方法,如果没有必要执行,则意味着可以直接回收
+			筛选依据:是否复写或执行过finalize()方法；因为finalize方法只能被执行一次
+		(2).第二次标记:如果被筛选判定位有必要执行,则会放入FQueue队列,并自动创建一个低优先级的finalize线程来执行释放操作.
+			如果在一个对象释放前被其他对象引用,则该对象会被移除FQueue队列;
 3.再谈引用:
 	3.1.无论是引用计数器判断对象引用的数量,还是可达性分析判断对象的引用链是否可达,判定对象的是否存活都与"引用"有关;
 	3.2.JDK1.2 以前,Java 中的引用:如果reference类型的数据中存储的数值代表的是另一块内存的起始地址,就称为这块内存代表一个引用;
@@ -58,7 +66,8 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 		强引用(Strong Refefence),软引用(Soft Refefence),弱引用(Weak Refefence),虚引用(Phantom Refefence)
 		4种引用强度依次逐渐减弱
 		(1).强引用(Strong Refefence):在代码中普遍存在的,类似 Object obj = new Object() 这类的引用,
-			只要强引用还存在,垃圾收集器永远不会回收掉被引用的对象;
+			只要强引用还存在,垃圾收集器永远不会回收掉被引用的对象;当内存空间不足.Java 虚拟机宁愿抛出 OutOfMemoryError
+			错误,使程序异常终止,也不会靠随意回收具有强引用的对象来解决内存不足的问题
 		(2).软引用(Soft Refefence):用来描述一些还有用但并非必需的对象;对于软引用关联的对象,在系统将要发生内存溢出异常之前,
 			将会把这些对象列进回收范围之中,进行第二次回收,如果这次回收还没有足够的内存,才会抛出内存溢出异常
 			JDK1.2 之后,提供了 SoftReference 类实现软引用
@@ -184,21 +193,77 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 		(3).最终标记(Final Marking)
 		(4).筛选回收(Live Data Counting and Evacuation)
 
-五.GC 执行机制:Scavenge GC 和 Full GC
-1.Scavenge GC: 一般情况下,当新对象生成,并且在 Eden 申请空间失败时,就会触发 Scavenge GC
+五.GC 执行机制:Minor GC 和 Full GC
+1.Minor GC:一般情况下,当新对象生成,并且在 Eden 申请空间失败时,就会触发 Minor GC,主要是针对新生代
 	对 Eden 区域进行 GC,清除非存活对象,并且把尚且存活的对象移动到 Survivor 区,然后整理 Survivor 的两个区.
 	这种方式的 GC 是对年轻代的 Eden 区进行,不会影响到年老代.因为大部分对象都是从 Eden 区开始的,同时 Eden 区不会分配的很大,
-	所以 Eden 区的 GC 会频繁进行.因而，一般在这里需要使用速度快、效率高的算法,使Eden去能尽快空闲出来
-
-2.Full GC:对整个堆进行整理,包括 Young、Tenured和Perm
+	所以 Eden 区的 GC 会频繁进行.因而,一般在这里需要使用速度快、效率高的算法,使Eden去能尽快空闲出来
+2.Full GC:对整个堆进行整理,包括 新生代,老年代和持久代
 	Full GC 因为需要对整个对进行回收，所以比 Scavenge GC 要慢,因此应该尽可能减少 Full GC 的次数。
 	在对JVM调优的过程中,很大一部分工作就是对于 FullGC 的调节。
 	有如下原因可能导致 Full GC：
-		(1).年老代(Tenured)被写满
-		(2).持久代(Perm)被写满
+		(1).老年代(Old)被写满
+		(2).持久代(Perm,方法区)被写满
 		(3).System.gc()被显示调用;
 		(4).上一次GC之后Heap的各域分配策略动态变化;
-
+		(5).CMS GC 时出现promotion failed和concurrent mode failure
+			promotion failed:是在进行 Minor GC时,survivor空间放不下、对象只能放入老生代,而此时老生代也放不下造成的
+			concurrent mode failure:在执行 CMS GC 的过程中同时有对象要放入老生代,而此时老生代空间不足造成的
+3.内存回收与分配策略:
+	3.1.对象优先分配在 Eden 区域:大多数情况下,对象在新生代的Eden区中分配,如果Eden区没有足够的空间时,虚拟机将发起一次 MinorGC
+		(1).查看代码的具体GC日志VM参数
+			-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+		(2).打印日志:
+			private static final int _1MB = 1024 * 1024;
+		    public static void testAllocation(){
+		        byte[] a1, a2, a3, a4;
+		        a1 = new byte[2 * _1MB];
+		        a2 = new byte[2 * _1MB];
+		        a3 = new byte[2 * _1MB];
+		        a4 = new byte[4 * _1MB];
+		    }
+		    [GC (Allocation Failure) [PSYoungGen: 14925K->1011K(18432K)] 14925K->13308K(38912K), 0.0042158 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+		    [Full GC (Ergonomics) [PSYoungGen: 1011K->0K(18432K)] [ParOldGen: 12296K->13203K(20480K)] 13308K->13203K(38912K), [Metaspace: 3395K->3395K(1056768K)], 0.0056106 secs] [Times: user=0.00 sys=0.00, real=0.01 secs] 
+		    [GC (Allocation Failure) [PSYoungGen: 6307K->96K(18432K)] 19511K->19443K(38912K), 0.0027672 secs] [Times: user=0.06 sys=0.00, real=0.00 secs] 
+		    [Full GC (Ergonomics) [PSYoungGen: 96K->0K(18432K)] [ParOldGen: 19347K->19250K(20480K)] 19443K->19250K(38912K), [Metaspace: 3419K->3419K(1056768K)], 0.0068909 secs] [Times: user=0.00 sys=0.00, real=0.01 secs] 
+		    Heap
+		     PSYoungGen      total 18432K, used 12779K [0x00000000fec00000, 0x0000000100000000, 0x0000000100000000)
+		      eden space 16384K, 78% used [0x00000000fec00000,0x00000000ff87afb0,0x00000000ffc00000)
+		      from space 2048K, 0% used [0x00000000ffe00000,0x00000000ffe00000,0x0000000100000000)
+		      to   space 2048K, 0% used [0x00000000ffc00000,0x00000000ffc00000,0x00000000ffe00000)
+		     ParOldGen       total 20480K, used 19250K [0x00000000fd800000, 0x00000000fec00000, 0x00000000fec00000)
+		      object space 20480K, 93% used [0x00000000fd800000,0x00000000feaccb48,0x00000000fec00000)
+		     Metaspace       used 3425K, capacity 4494K, committed 4864K, reserved 1056768K
+		      class space    used 378K, capacity 386K, committed 512K, reserved 1048576K {}
+		    ①.GC 日志开头"[GC"和 "[FULL GC"说明了这次垃圾收集停顿的类型,不是用来区分新生代GC和老年代GC的
+		    如果有Full 说明这次GC发生了的"Stop-the-world"
+		    ②.[PSYoungGen: 14925K->1011K(18432K)] 14925K->13308K(38912K), 0.0042158 secs
+		    	[PSYoungGen, [ParOldGen, [Metaspace 表示GC发生的区域
+		    	PSYoungGen ==> 表示使用的是 Parallel Scavenge 收集器来回收新生代的
+		    	ParOldGen ==> Parallel Old 收集器
+		    	14925K->1011K(18432K)==>GC前盖该内存区域已使用容量->GC后该区域已使用容量(该区域总容量)
+		    	14925K->13308K(38912K) ==> GC前Java堆已使用容量->GC后Java堆已使用容量(Java堆总容量)
+		    	0.0042158 secs ==> 该区域GC所占用时间,单位是秒
+		    ③.[Times: user=0.00 sys=0.00, real=0.00 secs] 
+		    user,sys,real 与Linux的time命令输出的时间含义一致,分别代表用户态消耗的CPU时间,内核态消耗的CPU时间和操作从开始到结束锁经过的墙钟时间
+	3.2.大对象直接进入老年代:
+		(1).所谓大对象是指需要大量连续内存空间的Java对象,最典型的大对象就是那种很长的字符串以及数组.
+		(2).经常出现大对象容易导致内存还有不少空间时就提前触发垃圾收集来获取足够的连续空间分配给新生成的大对象.
+		(3).虚拟机提供了:-XX:PertenureSizeThreshold 参数,令大于这个设置值的对象直接在老年代分配,避免在Eden区和两个Survivor
+			区之间发生大量的内存复制
+	3.3.长期存活的对象将进入老年代:
+		(1).虚拟机给每个对象定义了一个对象年龄计数器,来识别哪些对象放在新生代,哪些对象放在老年代中.
+			如果对象在Eden出生并经过一次 MinorGC 后仍然存活,并且能够被 Survivor 容纳,将被移动到 Survivor 空间,并且对象年龄为1
+			当它的对象年龄增加到一定程度(默认15岁),将会进入到老年代.
+			对象晋升老年代的年龄阈值,可以通过参数 --XX:MaxTenuringThreshold 设置
+	3.4.动态对象年龄判定:
+		如果在 Survivor 空间中相同年龄所有对象大小的总和大于 Survivor 空间的一般,年龄大于或等于该年龄的对象可以直接进入老年代,
+		无须等到 MaxTenuringThreshold 中要求的年龄
+	3.5.空间分配担保:
+		在发生 MinorGC 之前,虚拟机会先检查老年代最大可用的连续空间是否大于新生代所有对象总空间,如果这个条件成立,那么MinorGC
+		可用确保是安全的.如果不成立,则虚拟机会查看 HandlePromotionFailure 设置是否允许打包失败,如果允许,那么会继续检查老年代
+		最大可用连续空间是否大于历次晋升到老年代对象的平均大小,如果大于,将尝试着进行一次MinorGC,有风险;
+		如果小于或者 HandlePromotionFailure 设置不允许毛线,那时会改为进行一次 FullGC.
 六.详解 finalize()方法:finalize是位于 Object 类的一个方法,该方法的访问修饰符为 protected
 1.finalize函数没有自动实现链式调用,必须手动的实现,因此finalize函数的最后一个语句通常是 super.finalize(),
 	通过这种方式,我们可以实现从下到上实现finalize的调用,即先释放自己的资源,然后再释放父类的资源;
@@ -209,6 +274,7 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 	由于GC调用finalize的时间是不确定的,因此通过这种方式释放资源也是不确定的
 4.尽量少用finalize函数。finalize函数是Java提供给程序员一个释放对象或资源的机会。
 	但是，它会加大GC的工作量，因此尽量少采用finalize方式回收资源
+
 七.Java 有了GC同样会出现内存泄露问题
 1.静态集合类像 HashMap、Vector 等的使用最容易出现内存泄露,这些静态变量的生命周期和应用程序一致，
 所有的对象Object也不能被释放,因为他们也将一直被Vector等应用着;
@@ -216,18 +282,57 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 3.监听器的使用,在释放对象的同时没有相应删除监听器的时候也可能导致内存泄露
 
 八.如何优化 GC 
-/**
- * http://www.importnew.com/3146.html
- */
+// http://www.importnew.com/3146.html
 1.监控 GC:
 	1.1.垃圾回收收集监控指的是搞清楚 JVM 如何执行 GC 的过程,如可以查明
-		(1).何时一个新生代中的对象被移动到老年代时，所花费的时间
-		(2).Stop-the-world 何时发生的，持续了多长时间
+		(1).何时一个新生代中的对象被移动到老年代时,所花费的时间
+		(2).Stop-the-world 何时发生的,持续了多长时间
 		GC 监控是为了鉴别 JVM 是否在高效地执行 GC,以及是否有必要进行额外的性能调优
 	1.2.如何监控:
+	[参考:
+		/Java/JavaSE/Java-JVM/jstat命令执行结果.java
+		/Java/JavaSE/Java-JVM/JVM-Java虚拟机.java ---12.2
+	]
 		1.2.1.jstat:是 HotSpot JVM 提供的一个监控工具
 			jstat 不仅提供 GC 操作的信息,还提供类装载操作的信息以及运行时编译器操作的信息
-2.GC 优化:
+			$> jstat –gc  $<vmid$> 1000
+			==> vmid (虚拟机 ID)
+2.GC 优化:如果你没有设定内存的大小,并且系统充斥着大量的超时日志时,你就需要在你的系统中进行GC优化了
+	2.1.GC 优化的目的:
+		(1).将转移到老年代的对象数量降到最少:减少被移到老年代空间对象的数量,可以调整新生代的空间.
+			减少 FullGC 的频率.
+		(2).减少 Full GC 执行的时间:FullGC 的执行时间要比 MinorGC 要长很多.
+			如果试图通过削减老年代空间来减少 FullGC 的执行时间,可能会导致 OutOfMemoryError 或者增加 FullGC 执行此数
+			与之相反,如果你试图通过增加老年代空间来减少 Full GC 执行次数,执行时间会增加
+	2.2.GC 优化需要考虑的Java参数:
+		(1).堆内存空间:
+			-Xms : Heap area size when starting JVM,启动JVM时的堆内存空间
+			-Xmx : Maximum heap area size,堆内存最大限制
+		(2).新生代空间:
+			-XX:NewRatio : Ratio of New area and Old area,新生代和老年代的占比
+			-XX:NewSize : New area size,新生代空间
+			-XX:SurvivorRatio : Ratio ofEdenarea and Survivor area,Eden 和 Suvivor 空间的占比
+	2.3.当 OutOfMemoryError 错误发生并且是由于Perm空间不足导致时,另一个可能影响GC性能的参数是GC类型
+		Serial GC  	-XX:+UseSerialGC
+		Parallel GC：	-XX:+UseParallelGC
+						-XX:ParallelGCThreads=value
+		Parallel Compacting GC	-XX:+UseParallelOldGC
+		CMS GC	-XX:+UseConcMarkSweepGC
+				-XX:+UseParNewGC
+				-XX:+CMSParallelRemarkEnabled
+				-XX:CMSInitiatingOccupancyFraction=value
+				-XX:+UseCMSInitiatingOccupancyOnly
+		G1	-XX:+UnlockExperimentalVMOptions
+			-XX:+UseG1GC --> 在JDK6中这两个参数必须同时使用
+		==> 最常用的GC类型是Serial GC
+	2.4.GC 优化过程:
+		(1).监控GC状态:
+		(2).在分析监控结果后,决定是否进行GC优化:
+		(3).调整GC类型/内存空间
+		(4).分析结果
+		(5).如果结果令人满意,你可以将该参数应用于所有的服务器,并停止GC优化
+		-XX:+PrintGCDetails  表示在控制台上打印出GC具体细节
+		-XX:+PrintGC 表示在控制台上打印出GC信息
 九.减少GC开销:
 1.避免隐式的 String 字符串:
 	1.1."+"操作就会分配一个链接两个字符串的新的字符串,这里分配了一个隐式的StringBuilder对象来链接两个 String 字符串
@@ -250,7 +355,7 @@ Java 垃圾回收器是一种“自适应的、分代的、停止—复制、标
 	3.1.当前版本的Java编译器对于含有基本数据类型的键的数组以及Map的支持，是通过“装箱”来实现的-
 		自动装箱就是将原始数据装入一个对应的对象中，这个对象可被GC分配和回收
 
-4.使用数据流（Streams）代替内存缓冲区（in-memory buffers）
+4.使用数据流(Streams)代替内存缓冲区（in-memory buffers）
 	4.1.问题:
 		通过过ByteArrayInputStream,ByteBuffer 把数据读入内存中，然后再进行反序列化,完整的数据在构造新的对象的时候，
 		你需要为其分配空间，然后立刻又释放空间。并且，由于数据的大小你又不知道，你只能猜测 – 当超过初始化容量的时候，
